--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
 	"type": "module",
+	"main": "server.js",
 	"scripts": {
 		"start": "node server.js"
 	},
 	"dependencies": {
 		"express": "^4.18.2",
 		"http-errors": "^2.0.0",
-		"morgan": "^1.10.0"
+		"jsonwebtoken": "^9.0.0",
+		"morgan": "^1.10.0",
+		"passport": "^0.6.0",
+		"passport-jwt": "^4.0.1"
 	}
 }
