--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 	},
 	"dependencies": {
 		"express": "^4.18.2",
+		"express-validator": "^7.0.1",
 		"http-errors": "^2.0.0",
 		"jsonwebtoken": "^9.0.0",
 		"morgan": "^1.10.0"
