--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 		"start": "node server.js"
 	},
 	"dependencies": {
+		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
 		"express-validator": "^7.0.1",
 		"http-errors": "^2.0.0",
