--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"express-validator": "^7.0.1",
 		"http-errors": "^2.0.0",
 		"jsonwebtoken": "^9.0.0",
+		"mongoose": "^7.1.1",
 		"morgan": "^1.10.0",
 		"validator": "^13.9.0"
 	}
