--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
 	"type": "module",
 	"main": "server.js",
 	"scripts": {
-		"start": "node server.js",
-		"dev": "nodemon --no-warnings -i db.json"
+		"start": "node -r dotenv/config server.js",
+		"dev": "nodemon -r dotenv/config"
 	},
 	"dependencies": {
 		"dotenv": "^16.0.3",
