--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"mongoose": "^7.1.1",
 		"morgan": "^1.10.0",
 		"multer": "^1.4.5-lts.1",
+		"nodemailer": "^6.9.2",
 		"validator": "^13.9.0"
 	}
 }
