--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 		"dev": "nodemon -r dotenv/config"
 	},
 	"dependencies": {
+		"aws-sdk": "^2.895.0",
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
 		"express-validator": "^7.0.1",
@@ -13,7 +14,8 @@
 		"jsonwebtoken": "^9.0.0",
 		"mongoose": "^7.1.1",
 		"morgan": "^1.10.0",
-		"multer": "^1.4.5-lts.1",
+		"multer": "^1.4.2",
+		"multer-s3": "^2.9.0",
 		"nodemailer": "^6.9.2",
 		"validator": "^13.9.0"
 	}
