add build script

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"type": "module",
 	"main": "server.js",
 	"scripts": {
+		"build": "npm install",
 		"start": "node -r dotenv/config server.js",
 		"dev": "nodemon -r dotenv/config"
 	},
