--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"dev": "nodemon -r dotenv/config"
 	},
 	"dependencies": {
+		"@vonage/server-sdk": "^3.5.1",
 		"aws-sdk": "^2.895.0",
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
