--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"multer": "^1.4.2",
 		"multer-s3": "^2.9.0",
 		"nodemailer": "^6.9.2",
+		"transliteration": "^2.3.5",
 		"validator": "^13.9.0"
 	}
 }
