--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	"dependencies": {
 		"@vonage/server-sdk": "^3.5.1",
 		"aws-sdk": "^2.895.0",
+		"cors": "^2.8.5",
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
 		"express-validator": "^7.0.1",
