--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
 		"multer": "^1.4.2",
 		"multer-s3": "^2.9.0",
 		"nodemailer": "^6.9.2",
+		"swagger-jsdoc": "^6.2.8",
+		"swagger-ui-express": "^4.6.3",
 		"transliteration": "^2.3.5",
 		"validator": "^13.9.0"
 	}
