--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"scripts": {
 		"build": "npm install",
 		"start": "node -r dotenv/config server.js",
-		"dev": "nodemon -r dotenv/config"
+		"dev": "nodemon -r dotenv/config",
+		"test": "mocha"
 	},
 	"dependencies": {
 		"@vonage/server-sdk": "^3.5.1",
@@ -24,5 +25,10 @@
 		"swagger-ui-express": "^4.6.3",
 		"transliteration": "^2.3.5",
 		"validator": "^13.9.0"
+	},
+	"devDependencies": {
+		"chai": "^4.3.7",
+		"mocha": "^10.2.0",
+		"supertest": "^6.3.3"
 	}
 }
