--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 	"devDependencies": {
 		"chai": "^4.3.7",
 		"mocha": "^10.2.0",
+		"mongodb-memory-server": "^8.13.0",
 		"supertest": "^6.3.3"
 	}
 }
