--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	"dependencies": {
 		"@aws-sdk/client-s3": "^3.347.0",
 		"@vonage/server-sdk": "^3.5.1",
+		"apicache": "^1.6.3",
 		"bson": "^5.3.0",
 		"cors": "^2.8.5",
 		"dotenv": "^16.0.3",
